# python-template

./: .gitignore  README.md  setup.cfg  tasks.py
bash/: awk.sh  sed.sh  sed_awk.sh  task.sh  task_aws.sh
bash/linux_reference/: alias  screen  ssh  upgrading_python
bash/output/: standard_output.txt
bash/scripts/: awkscr_patterns  awkscr_printfields  sedscr
conf/: logging.conf  pipeline.conf  pipeline.template.conf
flask/yourapplication/app/: __init__.py  __main__.py  app.py  auth.py  endpoints.py
flask/yourapplication/app/openapi/: swagger.yaml
flask/yourapplication/app/templates/: index.html
linux_references/: config.template  ssh
postgresql_references/: references  setup_2.sh
postgresql_references/tutorial/sql/: insert_weather.sql
references/: jwt-cookie.py
references/aws/: general
references/linux/: ssh
references/postgresql/: psql-setup.sh
references/postgresql/tutorial/sql/: psql-setup.sh
scripts/: async_requests.py  asyncio_example.py  run_script.py
sql/: s3_redshift_template.sql  schema_ddl.sql
src/python_template/: __init__.py  aws.py  csv.py  db.py  funcs.py  json.py  sf.py
tests/scripts/: test_psqlconnect.py  test_psqlselect.py  test_sample.py
