    [metadata]
    name = python_template
    version = 0.1.0
    author = Neel Roshania
    author_email = nroshania@gmail.com
    description = boiler plate python template
    platform = unix, linux, osx, cygwin, win64

    [options]
    packages =
        python_template
    install_requires =
        ipykernel
        configparser
        boto3
    python_requires = >=3.9
    package_dir =
        =src
